--- a/.links2/bookmarks.html
+++ b/.links2/bookmarks.html
@@ -8,8 +8,8 @@ Do Not Edit! -->
 <H1>Links bookmarks</H1>
 
 <DL><P>
-    <DT><A HREF="https://www.reddit.com/r/unixporn/">r/unixporn - the home for *NIX customization!</A>
     <DT><A HREF="https://duckduckgo.com/lite/">DuckDuckGo</A>
+    <DT><A HREF="https://www.reddit.com/r/unixporn/new/">unixporn</A>
     <DT><A HREF="https://news.ycombinator.com/">Hacker News</A>
     <DT><H3>programes</H3>
 <DL>
