--- a/.links2/bookmarks.html
+++ b/.links2/bookmarks.html
@@ -9,11 +9,25 @@ Do Not Edit! -->
 
 <DL><P>
     <DT><A HREF="https://duckduckgo.com/lite/">DuckDuckGo</A>
+    <DT><H3>reddit</H3>
+<DL>
     <DT><A HREF="https://www.reddit.com/r/unixporn/new/">unixporn</A>
+    <DT><A HREF="https://www.reddit.com/r/emacs/new/">M-x emacs-reddit</A>
+</DL>
     <DT><A HREF="https://news.ycombinator.com/">Hacker News</A>
+    <DT><A HREF="https://nixers.net/">*Nixers</A>
     <DT><H3>programes</H3>
 <DL>
     <DT><A HREF="https://suckless.org/">suckless.org software that sucks less</A>
+</DL>
+    <DT><H3>Chan</H3>
+<DL>
+    <DT><A HREF="https://lainchan.org/">LAINCHAN</A>
+    <DT><A HREF="http://4-ch.net/code/">Programming @4-ch</A>
+    <DT><A HREF="https://boards.420chan.org/prog/">Programming - 420chan</A>
+    <DT><A HREF="https://arisuchan.jp/%CE%BB/">/λ/ - programming</A>
+    <DT><A HREF="https://endchan.xyz/tech/">/tech/ - Technology</A>
+    <DT><A HREF="https://wirechan.org/g/">/g/ - Technology</A>
 </DL>
     <DT><H3>Links</H3>
 <DL>
