Update and Elinks Config

--- a/.links2/bookmarks.html
+++ b/.links2/bookmarks.html
@@ -18,7 +18,9 @@ Do Not Edit! -->
     <DT><A HREF="https://nixers.net/">*Nixers</A>
     <DT><H3>programes</H3>
 <DL>
+    <DT><A HREF="https://forum.dlang.org/">D Programming Language Discussion Forum</A>
     <DT><A HREF="https://suckless.org/">suckless.org software that sucks less</A>
+    <DT><A HREF="https://github.com/mayfrost/guides">mayfrost/guides: Looking for a guide?</A>
 </DL>
     <DT><H3>Chan</H3>
 <DL>
