--- a/.links2/bookmarks.html
+++ b/.links2/bookmarks.html
@@ -9,6 +9,10 @@ Do Not Edit! -->
 
 <DL><P>
     <DT><A HREF="https://duckduckgo.com/lite/">DuckDuckGo</A>
+    <DT><H3>Learning</H3>
+<DL>
+    <DT><A HREF="https://teachyourselfcs.com/">Teach Yourself Computer Science</A>
+</DL>
     <DT><H3>reddit</H3>
 <DL>
     <DT><A HREF="https://www.reddit.com/r/unixporn/new/">unixporn</A>
