--- a/.links2/bookmarks.html
+++ b/.links2/bookmarks.html
@@ -12,6 +12,7 @@ Do Not Edit! -->
     <DT><H3>Learning</H3>
 <DL>
     <DT><A HREF="https://teachyourselfcs.com/">Teach Yourself Computer Science</A>
+    <DT><A HREF="https://github.com/ossu/computer-science">ossu/computer-science</A>
 </DL>
     <DT><H3>reddit</H3>
 <DL>
@@ -22,13 +23,14 @@ Do Not Edit! -->
     <DT><A HREF="https://nixers.net/">*Nixers</A>
     <DT><H3>programes</H3>
 <DL>
-    <DT><A HREF="https://forum.dlang.org/">D Programming Language Discussion Forum</A>
-    <DT><A HREF="https://suckless.org/">suckless.org software that sucks less</A>
     <DT><A HREF="https://github.com/mayfrost/guides">mayfrost/guides: Looking for a guide?</A>
+    <DT><A HREF="https://suckless.org/">suckless.org software that sucks less</A>
+    <DT><A HREF="https://forum.dlang.org/">D Programming Language Discussion Forum</A>
 </DL>
     <DT><H3>Chan</H3>
 <DL>
     <DT><A HREF="https://lainchan.org/">LAINCHAN</A>
+    <DT><A HREF="https://boards.systemspace.link/">TSUKICHAN</A>
     <DT><A HREF="http://4-ch.net/code/">Programming @4-ch</A>
     <DT><A HREF="https://boards.420chan.org/prog/">Programming - 420chan</A>
     <DT><A HREF="https://arisuchan.jp/%CE%BB/">/λ/ - programming</A>
