--- a/.links2/bookmarks.html
+++ b/.links2/bookmarks.html
@@ -16,6 +16,7 @@ Do Not Edit! -->
 </DL>
     <DT><H3>reddit</H3>
 <DL>
+    <DT><A HREF="https://www.reddit.com/r/commandline/new/">Command Line</A>
     <DT><A HREF="https://www.reddit.com/r/unixporn/new/">unixporn</A>
     <DT><A HREF="https://www.reddit.com/r/emacs/new/">M-x emacs-reddit</A>
 </DL>
