Update and add battery to dwmstatus

--- a/.links2/bookmarks.html
+++ b/.links2/bookmarks.html
@@ -11,6 +11,7 @@ Do Not Edit! -->
     <DT><A HREF="https://duckduckgo.com/lite/">DuckDuckGo</A>
     <DT><H3>Learning</H3>
 <DL>
+    <DT><A HREF="http://gen.lib.rus.ec/">Library Genesis</A>
     <DT><A HREF="https://teachyourselfcs.com/">Teach Yourself Computer Science</A>
     <DT><A HREF="https://github.com/ossu/computer-science">ossu/computer-science</A>
 </DL>
