New Year Update

--- a/.links2/bookmarks.html
+++ b/.links2/bookmarks.html
@@ -19,7 +19,13 @@ Do Not Edit! -->
 <DL>
     <DT><A HREF="https://www.reddit.com/r/commandline/new/">Command Line</A>
     <DT><A HREF="https://www.reddit.com/r/unixporn/new/">unixporn</A>
+    <DT><A HREF="https://www.reddit.com/r/learnprogramming">learn programming</A>
+    <DT><A HREF="https://www.reddit.com/r/learnprogramming/new">learn programming NEW</A>
+    <DT><A HREF="https://www.reddit.com/r/ComputerScience">Computer Science</A>
+    <DT><A HREF="https://www.reddit.com/r/ComputerScience/new">Computer Science NEW</A>
     <DT><A HREF="https://www.reddit.com/r/emacs/new/">M-x emacs-reddit</A>
+    <DT><A HREF="https://www.reddit.com/r/planetemacs">Planet Emacs</A>
+    <DT><A HREF="https://www.reddit.com/r/planetemacs/new">Planet Emacs NEW</A>
 </DL>
     <DT><A HREF="https://news.ycombinator.com/">Hacker News</A>
     <DT><A HREF="https://nixers.net/">*Nixers</A>
@@ -32,11 +38,12 @@ Do Not Edit! -->
     <DT><H3>Chan</H3>
 <DL>
     <DT><A HREF="https://lainchan.org/">LAINCHAN</A>
-    <DT><A HREF="https://boards.systemspace.link/">TSUKICHAN</A>
-    <DT><A HREF="http://4-ch.net/code/">Programming @4-ch</A>
-    <DT><A HREF="https://boards.420chan.org/prog/">Programming - 420chan</A>
+    <DT><A HREF="http://www.4channel.org/">4channels</A>
     <DT><A HREF="https://arisuchan.jp/%CE%BB/">/λ/ - programming</A>
     <DT><A HREF="https://endchan.xyz/tech/">/tech/ - Technology</A>
+    <DT><A HREF="https://boards.420chan.org/prog/">Programming - 420chan</A>
+    <DT><A HREF="https://boards.systemspace.link/">TSUKICHAN</A>
+    <DT><A HREF="http://4-ch.net/code/">Programming @4-ch</A>
     <DT><A HREF="https://wirechan.org/g/">/g/ - Technology</A>
 </DL>
     <DT><H3>Links</H3>
