--- a/.links2/bookmarks.html
+++ b/.links2/bookmarks.html
@@ -12,6 +12,7 @@ Do Not Edit! -->
     <DT><H3>Learning</H3>
 <DL>
     <DT><A HREF="http://gen.lib.rus.ec/">Library Genesis</A>
+    <DT><A HREF="http://audiobookbay.nl/ Is this site down? I tried many timeshttp://audiobookbay.nl/">Audiobooks</A>
     <DT><A HREF="https://teachyourselfcs.com/">Teach Yourself Computer Science</A>
     <DT><A HREF="https://github.com/ossu/computer-science">ossu/computer-science</A>
 </DL>
@@ -29,6 +30,7 @@ Do Not Edit! -->
 </DL>
     <DT><A HREF="https://news.ycombinator.com/">Hacker News</A>
     <DT><A HREF="https://nixers.net/">*Nixers</A>
+    <DT><A HREF="https://fs.blog/best-articles/">The Best Articles on Farnam Street</A>
     <DT><H3>programes</H3>
 <DL>
     <DT><A HREF="https://github.com/mayfrost/guides">mayfrost/guides: Looking for a guide?</A>
@@ -38,7 +40,6 @@ Do Not Edit! -->
     <DT><H3>Chan</H3>
 <DL>
     <DT><A HREF="https://lainchan.org/">LAINCHAN</A>
-    <DT><A HREF="http://www.4channel.org/">4channels</A>
     <DT><A HREF="https://arisuchan.jp/%CE%BB/">/λ/ - programming</A>
     <DT><A HREF="https://endchan.xyz/tech/">/tech/ - Technology</A>
     <DT><A HREF="https://boards.420chan.org/prog/">Programming - 420chan</A>
