--- a/.links2/bookmarks.html
+++ b/.links2/bookmarks.html
@@ -20,6 +20,7 @@ Do Not Edit! -->
 <DL>
     <DT><A HREF="https://www.reddit.com/r/commandline/new/">Command Line</A>
     <DT><A HREF="https://www.reddit.com/r/unixporn/new/">unixporn</A>
+    <DT><A HREF="https://www.reddit.com/r/unixart">unixart</A>
     <DT><A HREF="https://www.reddit.com/r/learnprogramming">learn programming</A>
     <DT><A HREF="https://www.reddit.com/r/learnprogramming/new">learn programming NEW</A>
     <DT><A HREF="https://www.reddit.com/r/ComputerScience">Computer Science</A>
