--- a/.links2/bookmarks.html
+++ b/.links2/bookmarks.html
@@ -25,9 +25,14 @@ Do Not Edit! -->
     <DT><A HREF="https://www.reddit.com/r/learnprogramming/new">learn programming NEW</A>
     <DT><A HREF="https://www.reddit.com/r/ComputerScience">Computer Science</A>
     <DT><A HREF="https://www.reddit.com/r/ComputerScience/new">Computer Science NEW</A>
+    <DT><H3>Editors</H3>
+<DL>
     <DT><A HREF="https://www.reddit.com/r/emacs/new/">M-x emacs-reddit</A>
+    <DT><A HREF="https://www.reddit.com/r/vim">VIM - Vi IMproved</A>
+    <DT><A HREF="https://www.reddit.com/r/acme/new/">The Acme Text Editor</A>
     <DT><A HREF="https://www.reddit.com/r/planetemacs">Planet Emacs</A>
     <DT><A HREF="https://www.reddit.com/r/planetemacs/new">Planet Emacs NEW</A>
+</DL>
 </DL>
     <DT><A HREF="https://news.ycombinator.com/">Hacker News</A>
     <DT><A HREF="https://nixers.net/">*Nixers</A>
