--- a/.links2/bookmarks.html
+++ b/.links2/bookmarks.html
@@ -28,15 +28,17 @@ Do Not Edit! -->
     <DT><H3>Editors</H3>
 <DL>
     <DT><A HREF="https://www.reddit.com/r/emacs/new/">M-x emacs-reddit</A>
-    <DT><A HREF="https://www.reddit.com/r/vim">VIM - Vi IMproved</A>
+    <DT><A HREF="https://www.reddit.com/r/vim/new">VIM - Vi IMproved</A>
     <DT><A HREF="https://www.reddit.com/r/acme/new/">The Acme Text Editor</A>
     <DT><A HREF="https://www.reddit.com/r/planetemacs">Planet Emacs</A>
     <DT><A HREF="https://www.reddit.com/r/planetemacs/new">Planet Emacs NEW</A>
 </DL>
 </DL>
+    <DT><H3>News</H3>
+<DL>
+    <DT><A HREF="https://news.bubblin.io/">Hackernews of Books &amp; Technology | news.bubblin</A>
     <DT><A HREF="https://news.ycombinator.com/">Hacker News</A>
-    <DT><A HREF="https://nixers.net/">*Nixers</A>
-    <DT><A HREF="https://fs.blog/best-articles/">The Best Articles on Farnam Street</A>
+</DL>
     <DT><H3>programes</H3>
 <DL>
     <DT><A HREF="https://github.com/mayfrost/guides">mayfrost/guides: Looking for a guide?</A>
@@ -45,6 +47,7 @@ Do Not Edit! -->
 </DL>
     <DT><H3>Chan</H3>
 <DL>
+    <DT><A HREF="https://nixers.net/">*Nixers</A>
     <DT><A HREF="https://lainchan.org/">LAINCHAN</A>
     <DT><A HREF="https://arisuchan.jp/%CE%BB/">/λ/ - programming</A>
     <DT><A HREF="https://endchan.xyz/tech/">/tech/ - Technology</A>
@@ -68,5 +71,6 @@ Do Not Edit! -->
     <DT><A HREF="http://links.twibright.com/user.html">Manual k Linksu</A>
 </DL>
 </DL>
+    <DT><A HREF="https://fs.blog/best-articles/">The Best Articles on Farnam Street</A>
 </DL><P>
 </HTML>
