--- a/.links2/bookmarks.html
+++ b/.links2/bookmarks.html
@@ -20,7 +20,7 @@ Do Not Edit! -->
 <DL>
     <DT><A HREF="https://www.reddit.com/r/commandline/new/">Command Line</A>
     <DT><A HREF="https://www.reddit.com/r/unixporn/new/">unixporn</A>
-    <DT><A HREF="https://www.reddit.com/r/unixart">unixart</A>
+    <DT><A HREF="https://www.reddit.com/r/unixart/new">unixart</A>
     <DT><A HREF="https://www.reddit.com/r/learnprogramming">learn programming</A>
     <DT><A HREF="https://www.reddit.com/r/learnprogramming/new">learn programming NEW</A>
     <DT><A HREF="https://www.reddit.com/r/ComputerScience">Computer Science</A>
@@ -36,8 +36,8 @@ Do Not Edit! -->
 </DL>
     <DT><H3>News</H3>
 <DL>
-    <DT><A HREF="https://news.bubblin.io/">Hackernews of Books &amp; Technology | news.bubblin</A>
     <DT><A HREF="https://news.ycombinator.com/">Hacker News</A>
+    <DT><A HREF="https://news.bubblin.io/">Hackernews of Books &amp; Technology | news.bubblin</A>
 </DL>
     <DT><H3>programes</H3>
 <DL>
@@ -51,7 +51,6 @@ Do Not Edit! -->
     <DT><A HREF="https://lainchan.org/">LAINCHAN</A>
     <DT><A HREF="https://arisuchan.jp/%CE%BB/">/λ/ - programming</A>
     <DT><A HREF="https://endchan.xyz/tech/">/tech/ - Technology</A>
-    <DT><A HREF="https://boards.420chan.org/prog/">Programming - 420chan</A>
     <DT><A HREF="https://boards.systemspace.link/">TSUKICHAN</A>
     <DT><A HREF="http://4-ch.net/code/">Programming @4-ch</A>
     <DT><A HREF="https://wirechan.org/g/">/g/ - Technology</A>
