--- a/.links2/bookmarks.html
+++ b/.links2/bookmarks.html
@@ -12,9 +12,11 @@ Do Not Edit! -->
     <DT><H3>Learning</H3>
 <DL>
     <DT><A HREF="http://gen.lib.rus.ec/">Library Genesis</A>
+    <DT><A HREF="http://134.209.43.254:8083/login?next=%2F">DeepSpec Library | Recently Added Books</A>
     <DT><A HREF="http://audiobookbay.nl/ Is this site down? I tried many timeshttp://audiobookbay.nl/">Audiobooks</A>
     <DT><A HREF="https://teachyourselfcs.com/">Teach Yourself Computer Science</A>
     <DT><A HREF="https://github.com/ossu/computer-science">ossu/computer-science</A>
+    <DT><A HREF="https://thufie.lain.haus/liberation.html">EBook Liberation Guide</A>
 </DL>
     <DT><H3>reddit</H3>
 <DL>
