--- a/.homepage/index.html
+++ b/.homepage/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2019-09-25 Wed 06:46 -->
+<!-- 2019-10-15 Tue 20:46 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Ahmeds' Homepage file</title>
@@ -244,48 +244,16 @@ for the JavaScript code in this tag.
 <body>
 <div id="content">
 <h1 class="title">Ahmeds' Homepage file</h1>
-<div><pre class="">
-             ________________________________________________
-            /                                                \
-           |    _________________________________________     |
-           |   |                                         |    |
-           |   |  λ> whoami                              |    |
-           |   |  master                                 |    |
-           |   |                                         |    |
-           |   |                                         |    |
-           |   |                                         |    |
-           |   |                                         |    |
-           |   |                                         |    |
-           |   |                                         |    |
-           |   |                                         |    |
-           |   |                                         |    |
-           |   |                                         |    |
-           |   |                                         |    |
-           |   |_________________________________________|    |
-           |                                                  |
-            \_________________________________________________/
-                   \___________________________________/
-                ___________________________________________
-             _-'    .-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.  --- `-_
-          _-'.-.-. .---.-.-.-.-.-.-.-.-.-.-.-.-.-.-.--.  .-.-.`-_
-       _-'.-.-.-. .---.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-`__`. .-.-.-.`-_
-    _-'.-.-.-.-. .-----.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-----. .-.-.-.-.`-_
- _-'.-.-.-.-.-. .---.-. .-------------------------. .-.---. .---.-.-.-.`-_
-:-------------------------------------------------------------------------:
-`---._.-------------------------------------------------------------._.---'
-                              -Roland Hangg-
-</pre></div>
-
-<div id="outline-container-org7cd0e2e" class="outline-2">
-<h2 id="org7cd0e2e"><span class="section-number-2">1</span> Links Bookmarks</h2>
+<div id="outline-container-orgdbc5910" class="outline-2">
+<h2 id="orgdbc5910"><span class="section-number-2">1</span> Links Bookmarks</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://ddg.gg/lite">DuckDuckGo</a></li>
 </ul>
 </div>
 
-<div id="outline-container-orgec32ce5" class="outline-3">
-<h3 id="orgec32ce5"><span class="section-number-3">1.1</span> Community</h3>
+<div id="outline-container-orga7a225c" class="outline-3">
+<h3 id="orga7a225c"><span class="section-number-3">1.1</span> Community</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><a href="https://nixers.net/">*Nixers</a></li>
@@ -299,8 +267,8 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org4e3b9d0" class="outline-3">
-<h3 id="org4e3b9d0"><span class="section-number-3">1.2</span> Computer Science</h3>
+<div id="outline-container-orgfacebe6" class="outline-3">
+<h3 id="orgfacebe6"><span class="section-number-3">1.2</span> Computer Science</h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-042j-mathematics-for-computer-science-fall-2010/video-lectures/">Math4CS old</a></li>
@@ -314,8 +282,8 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div id="outline-container-orge01136b" class="outline-3">
-<h3 id="orge01136b"><span class="section-number-3">1.3</span> Learning</h3>
+<div id="outline-container-org318715a" class="outline-3">
+<h3 id="org318715a"><span class="section-number-3">1.3</span> Learning</h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://gen.lib.rus.ec/">Library Genesis</a></li>
@@ -324,11 +292,12 @@ for the JavaScript code in this tag.
 <li><a href="https://teachyourselfcs.com/">Teach Yourself Computer Science</a></li>
 <li><a href="https://github.com/ossu/computer-science">ossu/computer-science</a></li>
 <li><a href="https://thufie.lain.haus/liberation.html">EBook Liberation Guide</a></li>
+<li><a href="https://www.webtoons.com/en/drama/dr-frost/list?title_no=371&amp;page=13">Dr. Frost</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org1999260" class="outline-3">
-<h3 id="org1999260"><span class="section-number-3">1.4</span> Medicine</h3>
+<div id="outline-container-org303028f" class="outline-3">
+<h3 id="org303028f"><span class="section-number-3">1.4</span> Medicine</h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><a href="https://forsanalazhar.wixsite.com/medical-students">Forsan Alazhar</a></li>
@@ -337,8 +306,8 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div id="outline-container-org4304dbc" class="outline-3">
-<h3 id="org4304dbc"><span class="section-number-3">1.5</span> News</h3>
+<div id="outline-container-org291816f" class="outline-3">
+<h3 id="org291816f"><span class="section-number-3">1.5</span> News</h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://serializer.ioi/cozydove">News | Serilizer</a></li>
@@ -348,15 +317,15 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org8fb2b81" class="outline-3">
-<h3 id="org8fb2b81"><span class="section-number-3">1.6</span> Technology</h3>
+<div id="outline-container-orgd459c02" class="outline-3">
+<h3 id="orgd459c02"><span class="section-number-3">1.6</span> Technology</h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><a href="https://texteditors.org/cgi-bin/wiki.pl">Wiki|TextEditors</a></li>
 </ul>
 </div>
-<div id="outline-container-orgfd213eb" class="outline-4">
-<h4 id="orgfd213eb"><span class="section-number-4">1.6.1</span> intersting stuff</h4>
+<div id="outline-container-org10edec7" class="outline-4">
+<h4 id="org10edec7"><span class="section-number-4">1.6.1</span> intersting stuff</h4>
 <div class="outline-text-4" id="text-1-6-1">
 <ul class="org-ul">
 <li><a href="https://github.com/tuvtran/project-based-learning">ProjectBase0learning</a></li>
@@ -371,7 +340,7 @@ for the JavaScript code in this tag.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Ahmed Khaled</p>
-<p class="date">Created: 2019-09-25 Wed 06:46</p>
+<p class="date">Created: 2019-10-15 Tue 20:46</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
