--- a/.homepage/index.html
+++ b/.homepage/index.html
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN""http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+
 <head>
-<!-- 2019-10-15 Tue 20:46 -->
+<!-- Sun 01 Dec 2019 02:51:50 PM EET
+	_    _                        _ _  ___           _          _ 
+   / \  | |__  _ __ ___   ___  __| | |/ / |__   __ _| | ___  __| |
+  / _ \ | '_ \| '_ ` _ \ / _ \/ _` | ' /| '_ \ / _` | |/ _ \/ _` |
+ / ___ \| | | | | | | | |  __/ (_| | . \| | | | (_| | |  __/ (_| |
+/_/   \_\_| |_|_| |_| |_|\___|\__,_|_|\_\_| |_|\__,_|_|\___|\__,_| ahmed_khaledAtzohoDoTcom
+                                                                  
+
+-->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Ahmeds' Homepage file</title>
@@ -13,234 +21,13 @@
  <!--/*--><![CDATA[/*><!--*/
   .title  { text-align: center;
              margin-bottom: .2em; }
-  .subtitle { text-align: center;
-              font-size: medium;
-              font-weight: bold;
-              margin-top:0; }
-  .todo   { font-family: monospace; color: red; }
-  .done   { font-family: monospace; color: green; }
-  .priority { font-family: monospace; color: orange; }
-  .tag    { background-color: #eee; font-family: monospace;
-            padding: 2px; font-size: 80%; font-weight: normal; }
-  .timestamp { color: #bebebe; }
-  .timestamp-kwd { color: #5f9ea0; }
-  .org-right  { margin-left: auto; margin-right: 0px;  text-align: right; }
-  .org-left   { margin-left: 0px;  margin-right: auto; text-align: left; }
-  .org-center { margin-left: auto; margin-right: auto; text-align: center; }
-  .underline { text-decoration: underline; }
-  #postamble p, #preamble p { font-size: 90%; margin: .2em; }
-  p.verse { margin-left: 3%; }
-  pre {
-    border: 1px solid #ccc;
-    box-shadow: 3px 3px 3px #eee;
-    padding: 8pt;
-    font-family: monospace;
-    overflow: auto;
-    margin: 1.2em;
-  }
-  pre.src {
-    position: relative;
-    overflow: visible;
-    padding-top: 1.2em;
-  }
-  pre.src:before {
-    display: none;
-    position: absolute;
-    background-color: white;
-    top: -10px;
-    right: 10px;
-    padding: 3px;
-    border: 1px solid black;
-  }
-  pre.src:hover:before { display: inline;}
-  /* Languages per Org manual */
-  pre.src-asymptote:before { content: 'Asymptote'; }
-  pre.src-awk:before { content: 'Awk'; }
-  pre.src-C:before { content: 'C'; }
-  /* pre.src-C++ doesn't work in CSS */
-  pre.src-clojure:before { content: 'Clojure'; }
-  pre.src-css:before { content: 'CSS'; }
-  pre.src-D:before { content: 'D'; }
-  pre.src-ditaa:before { content: 'ditaa'; }
-  pre.src-dot:before { content: 'Graphviz'; }
-  pre.src-calc:before { content: 'Emacs Calc'; }
-  pre.src-emacs-lisp:before { content: 'Emacs Lisp'; }
-  pre.src-fortran:before { content: 'Fortran'; }
-  pre.src-gnuplot:before { content: 'gnuplot'; }
-  pre.src-haskell:before { content: 'Haskell'; }
-  pre.src-hledger:before { content: 'hledger'; }
-  pre.src-java:before { content: 'Java'; }
-  pre.src-js:before { content: 'Javascript'; }
-  pre.src-latex:before { content: 'LaTeX'; }
-  pre.src-ledger:before { content: 'Ledger'; }
-  pre.src-lisp:before { content: 'Lisp'; }
-  pre.src-lilypond:before { content: 'Lilypond'; }
-  pre.src-lua:before { content: 'Lua'; }
-  pre.src-matlab:before { content: 'MATLAB'; }
-  pre.src-mscgen:before { content: 'Mscgen'; }
-  pre.src-ocaml:before { content: 'Objective Caml'; }
-  pre.src-octave:before { content: 'Octave'; }
-  pre.src-org:before { content: 'Org mode'; }
-  pre.src-oz:before { content: 'OZ'; }
-  pre.src-plantuml:before { content: 'Plantuml'; }
-  pre.src-processing:before { content: 'Processing.js'; }
-  pre.src-python:before { content: 'Python'; }
-  pre.src-R:before { content: 'R'; }
-  pre.src-ruby:before { content: 'Ruby'; }
-  pre.src-sass:before { content: 'Sass'; }
-  pre.src-scheme:before { content: 'Scheme'; }
-  pre.src-screen:before { content: 'Gnu Screen'; }
-  pre.src-sed:before { content: 'Sed'; }
-  pre.src-sh:before { content: 'shell'; }
-  pre.src-sql:before { content: 'SQL'; }
-  pre.src-sqlite:before { content: 'SQLite'; }
-  /* additional languages in org.el's org-babel-load-languages alist */
-  pre.src-forth:before { content: 'Forth'; }
-  pre.src-io:before { content: 'IO'; }
-  pre.src-J:before { content: 'J'; }
-  pre.src-makefile:before { content: 'Makefile'; }
-  pre.src-maxima:before { content: 'Maxima'; }
-  pre.src-perl:before { content: 'Perl'; }
-  pre.src-picolisp:before { content: 'Pico Lisp'; }
-  pre.src-scala:before { content: 'Scala'; }
-  pre.src-shell:before { content: 'Shell Script'; }
-  pre.src-ebnf2ps:before { content: 'ebfn2ps'; }
-  /* additional language identifiers per "defun org-babel-execute"
-       in ob-*.el */
-  pre.src-cpp:before  { content: 'C++'; }
-  pre.src-abc:before  { content: 'ABC'; }
-  pre.src-coq:before  { content: 'Coq'; }
-  pre.src-groovy:before  { content: 'Groovy'; }
-  /* additional language identifiers from org-babel-shell-names in
-     ob-shell.el: ob-shell is the only babel language using a lambda to put
-     the execution function name together. */
-  pre.src-bash:before  { content: 'bash'; }
-  pre.src-csh:before  { content: 'csh'; }
-  pre.src-ash:before  { content: 'ash'; }
-  pre.src-dash:before  { content: 'dash'; }
-  pre.src-ksh:before  { content: 'ksh'; }
-  pre.src-mksh:before  { content: 'mksh'; }
-  pre.src-posh:before  { content: 'posh'; }
-  /* Additional Emacs modes also supported by the LaTeX listings package */
-  pre.src-ada:before { content: 'Ada'; }
-  pre.src-asm:before { content: 'Assembler'; }
-  pre.src-caml:before { content: 'Caml'; }
-  pre.src-delphi:before { content: 'Delphi'; }
-  pre.src-html:before { content: 'HTML'; }
-  pre.src-idl:before { content: 'IDL'; }
-  pre.src-mercury:before { content: 'Mercury'; }
-  pre.src-metapost:before { content: 'MetaPost'; }
-  pre.src-modula-2:before { content: 'Modula-2'; }
-  pre.src-pascal:before { content: 'Pascal'; }
-  pre.src-ps:before { content: 'PostScript'; }
-  pre.src-prolog:before { content: 'Prolog'; }
-  pre.src-simula:before { content: 'Simula'; }
-  pre.src-tcl:before { content: 'tcl'; }
-  pre.src-tex:before { content: 'TeX'; }
-  pre.src-plain-tex:before { content: 'Plain TeX'; }
-  pre.src-verilog:before { content: 'Verilog'; }
-  pre.src-vhdl:before { content: 'VHDL'; }
-  pre.src-xml:before { content: 'XML'; }
-  pre.src-nxml:before { content: 'XML'; }
-  /* add a generic configuration mode; LaTeX export needs an additional
-     (add-to-list 'org-latex-listings-langs '(conf " ")) in .emacs */
-  pre.src-conf:before { content: 'Configuration File'; }
-
-  table { border-collapse:collapse; }
-  caption.t-above { caption-side: top; }
-  caption.t-bottom { caption-side: bottom; }
-  td, th { vertical-align:top;  }
-  th.org-right  { text-align: center;  }
-  th.org-left   { text-align: center;   }
-  th.org-center { text-align: center; }
-  td.org-right  { text-align: right;  }
-  td.org-left   { text-align: left;   }
-  td.org-center { text-align: center; }
-  dt { font-weight: bold; }
-  .footpara { display: inline; }
-  .footdef  { margin-bottom: 1em; }
-  .figure { padding: 1em; }
-  .figure p { text-align: center; }
-  .equation-container {
-    display: table;
-    text-align: center;
-    width: 100%;
-  }
-  .equation {
-    vertical-align: middle;
-  }
-  .equation-label {
-    display: table-cell;
-    text-align: right;
-    vertical-align: middle;
-  }
-  .inlinetask {
-    padding: 10px;
-    border: 2px solid gray;
-    margin: 10px;
-    background: #ffffcc;
-  }
-  #org-div-home-and-up
-   { text-align: right; font-size: 70%; white-space: nowrap; }
-  textarea { overflow-x: auto; }
-  .linenr { font-size: smaller }
-  .code-highlighted { background-color: #ffff00; }
-  .org-info-js_info-navigation { border-style: none; }
-  #org-info-js_console-label
-    { font-size: 10px; font-weight: bold; white-space: nowrap; }
-  .org-info-js_search-highlight
-    { background-color: #ffff00; color: #000000; font-weight: bold; }
-  .org-svg { width: 90%; }
+  #postamble p, #preamble p { font-size: 50%; margin: .2em; }
   /*]]>*/-->
 </style>
 <link rel="stylesheet" type="text/css" href="style.css" />
-<script type="text/javascript">
-/*
-@licstart  The following is the entire license notice for the
-JavaScript code in this tag.
-
-Copyright (C) 2012-2019 Free Software Foundation, Inc.
-
-The JavaScript code in this tag is free software: you can
-redistribute it and/or modify it under the terms of the GNU
-General Public License (GNU GPL) as published by the Free Software
-Foundation, either version 3 of the License, or (at your option)
-any later version.  The code is distributed WITHOUT ANY WARRANTY;
-without even the implied warranty of MERCHANTABILITY or FITNESS
-FOR A PARTICULAR PURPOSE.  See the GNU GPL for more details.
-
-As additional permission under GNU GPL version 3 section 7, you
-may distribute non-source (e.g., minimized or compacted) forms of
-that code without the copy of the GNU GPL normally required by
-section 4, provided you include this license notice and a URL
-through which recipients can access the Corresponding Source.
-
-
-@licend  The above is the entire license notice
-for the JavaScript code in this tag.
-*/
-<!--/*--><![CDATA[/*><!--*/
- function CodeHighlightOn(elem, id)
- {
-   var target = document.getElementById(id);
-   if(null != target) {
-     elem.cacheClassElem = elem.className;
-     elem.cacheClassTarget = target.className;
-     target.className = "code-highlighted";
-     elem.className   = "code-highlighted";
-   }
- }
- function CodeHighlightOff(elem, id)
- {
-   var target = document.getElementById(id);
-   if(elem.cacheClassElem)
-     elem.className = elem.cacheClassElem;
-   if(elem.cacheClassTarget)
-     target.className = elem.cacheClassTarget;
- }
-/*]]>*///-->
-</script>
 </head>
+
+
 <body>
 <div id="content">
 <h1 class="title">Ahmeds' Homepage file</h1>
@@ -248,90 +35,90 @@ for the JavaScript code in this tag.
 <h2 id="orgdbc5910"><span class="section-number-2">1</span> Links Bookmarks</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
-<li><a href="https://ddg.gg/lite">DuckDuckGo</a></li>
+	<li><a href="https://ddg.gg/lite">DuckDuckGo</a></li>
 </ul>
 </div>
 
 <div id="outline-container-orga7a225c" class="outline-3">
-<h3 id="orga7a225c"><span class="section-number-3">1.1</span> Community</h3>
+	<h3 id="orga7a225c"><span class="section-number-3">1.1</span> Community</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
-<li><a href="https://nixers.net/">*Nixers</a></li>
-<li><a href="https://lainchan.org/">LAINCHAN</a></li>
-<li><a href="https://arisuchan.jp/%CE%BB/"><i>λ</i> - programming</a></li>
-<li><a href="https://endchan.xyz/tech/"><i>tech</i> - Technology</a></li>
-<li><a href="https://boards.systemspace.link/">TSUKICHAN</a></li>
-<li><a href="http://4-ch.net/code/">Programming @4-ch</a></li>
-<li><a href="https://wirechan.org/g/"><i>g</i> - Technology</a></li>
+		<li><a href="https://nixers.net/">*Nixers</a></li>
+		<li><a href="https://lainchan.org/">LAINCHAN</a></li>
+		<li><a href="https://arisuchan.jp/%CE%BB/"><i>λ</i> - programming</a></li>
+		<li><a href="https://endchan.xyz/tech/"><i>tech</i> - Technology</a></li>
+		<li><a href="https://boards.systemspace.link/">TSUKICHAN</a></li>
+		<li><a href="http://4-ch.net/code/">Programming @4-ch</a></li>
+		<li><a href="https://wirechan.org/g/"><i>g</i> - Technology</a></li>
 </ul>
 </div>
 </div>
 
 <div id="outline-container-orgfacebe6" class="outline-3">
-<h3 id="orgfacebe6"><span class="section-number-3">1.2</span> Computer Science</h3>
+	<h3 id="orgfacebe6"><span class="section-number-3">1.2</span> Computer Science</h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
-<li><a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-042j-mathematics-for-computer-science-fall-2010/video-lectures/">Math4CS old</a></li>
-<li><a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-042j-mathematics-for-computer-science-spring-2015/index.htm">Mathematics for Computer Science</a></li>
-<li><a href="https://ocw.mit.edu/courses/mathematics/18-01sc-single-variable-calculus-fall-2010/">18<sub>01</sub> Singel Var Cal</a></li>
-<li><a href="https://teachyourselfcs.com/">Teach yourself CS</a></li>
-<li><a href="https://functionalcs.github.io/curriculum/#orgeff02fd">λ Self-Learning</a></li>
-<li><a href="https://github.com/ossu/computer-science">OSSU CS</a></li>
-<li><a href="https://www.youtube.com/playlist?list=PLOtl7M3yp-DX32N0fVIyvn7ipWKNGmwpp">Algorithms Lectures</a></li>
-<li><a href="http://www3.cs.stonybrook.edu/~skiena/373/">Algorithms website page</a></li>
+		<li><a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-042j-mathematics-for-computer-science-fall-2010/video-lectures/">Math4CS old</a></li>
+		<li><a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-042j-mathematics-for-computer-science-spring-2015/index.htm">Mathematics for Computer Science</a></li>
+		<li><a href="https://ocw.mit.edu/courses/mathematics/18-01sc-single-variable-calculus-fall-2010/">18<sub>01</sub> Singel Var Cal</a></li>
+		<li><a href="https://teachyourselfcs.com/">Teach yourself CS</a></li>
+		<li><a href="https://functionalcs.github.io/curriculum/#orgeff02fd">λ Self-Learning</a></li>
+		<li><a href="https://github.com/ossu/computer-science">OSSU CS</a></li>
+		<li><a href="https://www.youtube.com/playlist?list=PLOtl7M3yp-DX32N0fVIyvn7ipWKNGmwpp">Algorithms Lectures</a></li>
+		<li><a href="http://www3.cs.stonybrook.edu/~skiena/373/">Algorithms website page</a></li>
 </ul>
 </div>
 </div>
 <div id="outline-container-org318715a" class="outline-3">
-<h3 id="org318715a"><span class="section-number-3">1.3</span> Learning</h3>
+	<h3 id="org318715a"><span class="section-number-3">1.3</span> Learning</h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
-<li><a href="http://gen.lib.rus.ec/">Library Genesis</a></li>
-<li><a href="http://134.209.43.254:8083/login?next=/">#DEAD DeepSpec Library | Recently Ad</a></li>
-<li><a href="http://audiobookbay.nl/">audiobookbay</a></li>
-<li><a href="https://teachyourselfcs.com/">Teach Yourself Computer Science</a></li>
-<li><a href="https://github.com/ossu/computer-science">ossu/computer-science</a></li>
-<li><a href="https://thufie.lain.haus/liberation.html">EBook Liberation Guide</a></li>
-<li><a href="https://www.webtoons.com/en/drama/dr-frost/list?title_no=371&amp;page=13">Dr. Frost</a></li>
+		<li><a href="http://gen.lib.rus.ec/">Library Genesis</a></li>
+		<li><a href="http://134.209.43.254:8083/login?next=/">#DEAD DeepSpec Library | Recently Ad</a></li>
+		<li><a href="http://audiobookbay.nl/">audiobookbay</a></li>
+		<li><a href="https://teachyourselfcs.com/">Teach Yourself Computer Science</a></li>
+		<li><a href="https://github.com/ossu/computer-science">ossu/computer-science</a></li>
+		<li><a href="https://thufie.lain.haus/liberation.html">EBook Liberation Guide</a></li>
+		<li><a href="https://www.webtoons.com/en/drama/dr-frost/list?title_no=371&amp;page=13">Dr. Frost</a></li>
 </ul>
 </div>
 </div>
 <div id="outline-container-org303028f" class="outline-3">
-<h3 id="org303028f"><span class="section-number-3">1.4</span> Medicine</h3>
+	<h3 id="org303028f"><span class="section-number-3">1.4</span> Medicine</h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
-<li><a href="https://forsanalazhar.wixsite.com/medical-students">Forsan Alazhar</a></li>
-<li><a href="https://ocw.mit.edu/courses/health-sciences-and-technology/hst-035-principle-and-practice-of-human-pathology-spring-2003/lecture-notes/">Pathology</a></li>
-<li><a href="https://ocw.mit.edu/courses/health-sciences-and-technology/hst-151-principles-of-pharmacology-spring-2005/lecture-notes/">Pharmacology</a></li>
+		<li><a href="https://forsanalazhar.wixsite.com/medical-students">Forsan Alazhar</a></li>
+		<li><a href="https://ocw.mit.edu/courses/health-sciences-and-technology/hst-035-principle-and-practice-of-human-pathology-spring-2003/lecture-notes/">Pathology</a></li>
+		<li><a href="https://ocw.mit.edu/courses/health-sciences-and-technology/hst-151-principles-of-pharmacology-spring-2005/lecture-notes/">Pharmacology</a></li>
 </ul>
 </div>
 </div>
 <div id="outline-container-org291816f" class="outline-3">
-<h3 id="org291816f"><span class="section-number-3">1.5</span> News</h3>
+	<h3 id="org291816f"><span class="section-number-3">1.5</span> News</h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
-<li><a href="https://serializer.ioi/cozydove">News | Serilizer</a></li>
-<li><a href="https://news.ycombinator.com/">Hacker News</a></li>
-<li><a href="https://news.bubblin.io/">HackerNews for Books</a></li>
+		<li><a href="https://serializer.ioi/cozydove">News | Serilizer</a></li>
+		<li><a href="https://news.ycombinator.com/">Hacker News</a></li>
+		<li><a href="https://news.bubblin.io/">HackerNews for Books</a></li>
 </ul>
 </div>
 </div>
 
 <div id="outline-container-orgd459c02" class="outline-3">
-<h3 id="orgd459c02"><span class="section-number-3">1.6</span> Technology</h3>
+	<h3 id="orgd459c02"><span class="section-number-3">1.6</span> Technology</h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
-<li><a href="https://texteditors.org/cgi-bin/wiki.pl">Wiki|TextEditors</a></li>
+		<li><a href="https://texteditors.org/cgi-bin/wiki.pl">Wiki|TextEditors</a></li>
 </ul>
 </div>
 <div id="outline-container-org10edec7" class="outline-4">
 <h4 id="org10edec7"><span class="section-number-4">1.6.1</span> intersting stuff</h4>
 <div class="outline-text-4" id="text-1-6-1">
 <ul class="org-ul">
-<li><a href="https://github.com/tuvtran/project-based-learning">ProjectBase0learning</a></li>
-<li><a href="https://github.com/danistefanovic/build-your-own-x%20%20%20">ProjectBase1learning</a></li>
-<li><a href="https://github.com/rby90/Project-Based-Tutorials-in-C">ProjectBase2learning</a></li>
-<li><a href="https://github.com/hellerve/programming-talks">Programming Talk</a></li>
+		<li><a href="https://github.com/tuvtran/project-based-learning">ProjectBase0learning</a></li>
+		<li><a href="https://github.com/danistefanovic/build-your-own-x%20%20%20">ProjectBase1learning</a></li>
+		<li><a href="https://github.com/rby90/Project-Based-Tutorials-in-C">ProjectBase2learning</a></li>
+		<li><a href="https://github.com/hellerve/programming-talks">Programming Talk</a></li>
 </ul>
 </div>
 </div>
