--- a/.homepage/index.html
+++ b/.homepage/index.html
@@ -8,10 +8,7 @@
    / \  | |__  _ __ ___   ___  __| | |/ / |__   __ _| | ___  __| |
   / _ \ | '_ \| '_ ` _ \ / _ \/ _` | ' /| '_ \ / _` | |/ _ \/ _` |
  / ___ \| | | | | | | | |  __/ (_| | . \| | | | (_| | |  __/ (_| |
-/_/   \_\_| |_|_| |_| |_|\___|\__,_|_|\_\_| |_|\__,_|_|\___|\__,_| ahmed_khaledAtzohoDoTcom
-                                                                  
-
--->
+/_/   \_\_| |_|_| |_| |_|\___|\__,_|_|\_\_| |_|\__,_|_|\___|\__,_| ahmed_khaledAtzohoDoTcom -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Ahmeds' Homepage file</title>
@@ -45,11 +42,13 @@
 <ul class="org-ul">
 		<li><a href="https://nixers.net/">*Nixers</a></li>
 		<li><a href="https://lainchan.org/">LAINCHAN</a></li>
-		<li><a href="https://arisuchan.jp/%CE%BB/"><i>λ</i> - programming</a></li>
-		<li><a href="https://endchan.xyz/tech/"><i>tech</i> - Technology</a></li>
+		<li><a href="https://arisuchan.jp/%CE%BB/">λ - programming</a></li>
+		<li><a href="https://endchan.xyz/tech/">tech - Technology</a></li>
 		<li><a href="https://boards.systemspace.link/">TSUKICHAN</a></li>
 		<li><a href="http://4-ch.net/code/">Programming @4-ch</a></li>
-		<li><a href="https://wirechan.org/g/"><i>g</i> - Technology</a></li>
+		<li><a href="https://wirechan.org/g/">g - Technology</a></li>
+		<li><a href="https://dev.to">Dev</a></li>
+		<li><a href="https://tildes.net">Tildes</a></li>
 </ul>
 </div>
 </div>
@@ -63,6 +62,7 @@
 		<li><a href="https://ocw.mit.edu/courses/mathematics/18-01sc-single-variable-calculus-fall-2010/">18<sub>01</sub> Singel Var Cal</a></li>
 		<li><a href="https://teachyourselfcs.com/">Teach yourself CS</a></li>
 		<li><a href="https://functionalcs.github.io/curriculum/#orgeff02fd">λ Self-Learning</a></li>
+		<li><a href="https://n0x400.1mb.site/#org3623220">MIT webdev crash course</a></li>
 		<li><a href="https://github.com/ossu/computer-science">OSSU CS</a></li>
 		<li><a href="https://www.youtube.com/playlist?list=PLOtl7M3yp-DX32N0fVIyvn7ipWKNGmwpp">Algorithms Lectures</a></li>
 		<li><a href="http://www3.cs.stonybrook.edu/~skiena/373/">Algorithms website page</a></li>
