--- a/.homepage/index.html
+++ b/.homepage/index.html
@@ -110,6 +110,8 @@
 	    <div class="outline-text-3" >
 	      <ul class="org-ul">
 		<li><a href="http://www.macs.hw.ac.uk/ultra/skalpel/html/sml.html">SML prog lang</a></li>
+		<li><a href="https://c9x.me/">QBE hole</a></li>
+		<li><a href="https://eigenstate.org/">Ori hole</a></li>
 		<li><a href="https://github.com/xxzozaxx/guides/blob/master/ALTERNATIVES.md">ALTERNATIVE</a></li>
 		<li><a href="https://texteditors.org/cgi-bin/wiki.pl">Wiki|TextEditors</a></li>
 	      </ul>
