--- a/.homepage/index.html
+++ b/.homepage/index.html
@@ -59,7 +59,7 @@
 	  </div>
 	  
 	  <div>
-	    <h3> Mathematics</h3>
+	    <h3>Mathematics</h3>
 	    <div>
 	      <ul>
 		<li><a href="http://podcast.ucsd.edu/watch/sp19/cse20_b00/">CS20 Discrete Math</a></li>
@@ -73,7 +73,7 @@
 	  </div>
 	  
 	  <div  class="outline-3">
-	    <h3 ><span class="section-number-3">1.3</span> Learning</h3>
+	    <h3>Learning</h3>
 	    <div class="outline-text-3" > <ul class="org-ul">
 		<li><a href="http://audiobookbay.nl/">audiobookbay</a></li>
 		<li><a href="http://gen.lib.rus.ec/">Library Genesis</a></li>
@@ -88,16 +88,14 @@
 	  </div>
 	  
 	  <div  class="outline-3">
-	    <h3 ><span class="section-number-3">1.4</span> Medicine</h3>
+	    <h3>Medicine</h3>
 	    <div class="outline-text-3" > <ul class="org-ul">
 		<li><a href="https://forsanalazhar.wixsite.com/medical-students">Forsan Alazhar</a></li>
-		<li><a href="https://ocw.mit.edu/courses/health-sciences-and-technology/hst-035-principle-and-practice-of-human-pathology-spring-2003/lecture-notes/">Pathology</a></li>
-		<li><a href="https://ocw.mit.edu/courses/health-sciences-and-technology/hst-151-principles-of-pharmacology-spring-2005/lecture-notes/">Pharmacology</a></li>
 	    </ul> </div>
 	    
 	  </div>
 	  <div  class="outline-3">
-	    <h3 ><span class="section-number-3">1.5</span> News</h3>
+	    <h3>News</h3>
 	    <div class="outline-text-3" > <ul class="org-ul">
 		<li><a href="https://news.bubblin.io/">HackerNews for Books</a></li>
 		<li><a href="https://news.ycombinator.com/">Hacker News</a></li>
